Initial commit with Ringba live

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ RINGBA_API_TOKEN=your_api_token_here
 RINGBA_ACCOUNT_ID=your_account_id_here
 RINGBA_AUTH_FORMAT=Token
 
+# Ringba login credentials
+RINGBA_USERNAME=your_username_here
+RINGBA_PASSWORD=your_password_here
+
 # Slack Configuration
 SLACK_WEBHOOK_URL=your_slack_webhook_url_here
 
@@ -10,4 +14,8 @@ SLACK_WEBHOOK_URL=your_slack_webhook_url_here
 RPC_THRESHOLD=10.0
 
 # Target Name (set to "all" for all targets)
-TARGET_NAME=all 
+TARGET_NAME=all
+
+# Other settings
+MORNING_CHECK_TIME=10:00
+AFTERNOON_CHECK_TIME=15:00 
