--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-requests==2.31.0
+selenium==4.11.0
+webdriver-manager==4.0.0
 python-dotenv==1.0.0
-schedule==1.2.0
-pytz==2023.3 
+pandas==2.0.3
+pytz==2023.3
+requests==2.31.0 
