--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 selenium==4.11.0
 webdriver-manager==4.0.0
 python-dotenv==1.0.0
-pandas==2.0.3
+numpy==1.24.3
+pandas==2.0.0
 pytz==2023.3
 requests==2.31.0 
