--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: cron
     name: ringba-csv-exporter
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python src/simple_export.py
+    env: docker
+    dockerfilePath: ./Dockerfile
     plan: starter
     branch: main
     numInstances: 1
@@ -15,10 +14,6 @@ services:
         sync: false
       - key: RPC_THRESHOLD
         value: 10.0
-      - key: USE_HEADLESS
-        value: true
-      - key: PYTHONUNBUFFERED
-        value: true
       - key: MORNING_CHECK_TIME
         value: 10:00
       - key: AFTERNOON_CHECK_TIME
@@ -27,4 +22,4 @@ services:
         value: America/New_York
       - key: SLACK_WEBHOOK_URL
         sync: false
-    schedule: "0 10,15 * * *" # Runs at 10 AM and 3 PM in the TZ timezone 
+    schedule: 0 10,15 * * *
