enviroment group times and rpc

--- a/render.yaml
+++ b/render.yaml
@@ -9,21 +9,27 @@ services:
     autoDeploy: true
     envVars:
       - key: RINGBA_USERNAME
-        sync: false
+        fromGroup: ringba-secrets
       - key: RINGBA_PASSWORD
-        sync: false
+        fromGroup: ringba-secrets
+      - key: RINGBA_API_TOKEN
+        fromGroup: ringba-secrets
+      - key: RINGBA_ACCOUNT_ID
+        fromGroup: ringba-secrets
+      - key: SLACK_WEBHOOK_URL
+        fromGroup: ringba-secrets
       - key: RPC_THRESHOLD
-        value: 10.0
+        value: 12.0
       - key: MORNING_CHECK_TIME
         value: 11:00
+      - key: MIDDAY_CHECK_TIME
+        value: 14:00
       - key: AFTERNOON_CHECK_TIME
-        value: 15:00
+        value: 16:30
       - key: RUN_LABEL
         value: morning
       - key: TZ
         value: America/New_York
-      - key: SLACK_WEBHOOK_URL
-        sync: false
     schedule: 0 15 * * *  # 11 AM ET = 15:00 UTC
 
   - type: cron
@@ -36,21 +42,27 @@ services:
     autoDeploy: true
     envVars:
       - key: RINGBA_USERNAME
-        sync: false
+        fromGroup: ringba-secrets
       - key: RINGBA_PASSWORD
-        sync: false
+        fromGroup: ringba-secrets
+      - key: RINGBA_API_TOKEN
+        fromGroup: ringba-secrets
+      - key: RINGBA_ACCOUNT_ID
+        fromGroup: ringba-secrets
+      - key: SLACK_WEBHOOK_URL
+        fromGroup: ringba-secrets
       - key: RPC_THRESHOLD
-        value: 10.0
+        value: 12.0
       - key: MORNING_CHECK_TIME
         value: 11:00
-      - key: AFTERNOON_CHECK_TIME
+      - key: MIDDAY_CHECK_TIME
         value: 14:00
+      - key: AFTERNOON_CHECK_TIME
+        value: 16:30
       - key: RUN_LABEL
         value: midday
       - key: TZ
         value: America/New_York
-      - key: SLACK_WEBHOOK_URL
-        sync: false
     schedule: 0 18 * * *  # 2 PM ET = 18:00 UTC
 
   - type: cron
@@ -63,19 +75,25 @@ services:
     autoDeploy: true
     envVars:
       - key: RINGBA_USERNAME
-        sync: false
+        fromGroup: ringba-secrets
       - key: RINGBA_PASSWORD
-        sync: false
+        fromGroup: ringba-secrets
+      - key: RINGBA_API_TOKEN
+        fromGroup: ringba-secrets
+      - key: RINGBA_ACCOUNT_ID
+        fromGroup: ringba-secrets
+      - key: SLACK_WEBHOOK_URL
+        fromGroup: ringba-secrets
       - key: RPC_THRESHOLD
-        value: 10.0
+        value: 12.0
       - key: MORNING_CHECK_TIME
         value: 11:00
+      - key: MIDDAY_CHECK_TIME
+        value: 14:00
       - key: AFTERNOON_CHECK_TIME
         value: 16:30
       - key: RUN_LABEL
         value: afternoon
       - key: TZ
         value: America/New_York
-      - key: SLACK_WEBHOOK_URL
-        sync: false
     schedule: 30 20 * * *  # 4:30 PM ET = 20:30 UTC 
