one cron run again:

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: cron
-    name: ringba-csv-exporter-morning
+    name: ringba-csv-exporter
     env: docker
     dockerfilePath: ./Dockerfile
     plan: starter
@@ -9,15 +9,15 @@ services:
     autoDeploy: true
     envVars:
       - key: RINGBA_USERNAME
-        fromGroup: ringba-secrets
+        sync: false
       - key: RINGBA_PASSWORD
-        fromGroup: ringba-secrets
+        sync: false
       - key: RINGBA_API_TOKEN
-        fromGroup: ringba-secrets
+        sync: false
       - key: RINGBA_ACCOUNT_ID
-        fromGroup: ringba-secrets
+        sync: false
       - key: SLACK_WEBHOOK_URL
-        fromGroup: ringba-secrets
+        sync: false
       - key: RPC_THRESHOLD
         value: 12.0
       - key: MORNING_CHECK_TIME
@@ -26,74 +26,11 @@ services:
         value: 14:00
       - key: AFTERNOON_CHECK_TIME
         value: 16:30
-      - key: RUN_LABEL
-        value: morning
       - key: TZ
         value: America/New_York
-    schedule: 0 15 * * *  # 11 AM ET = 15:00 UTC
-
-  - type: cron
-    name: ringba-csv-exporter-midday
-    env: docker
-    dockerfilePath: ./Dockerfile
-    plan: starter
-    branch: main
-    numInstances: 1
-    autoDeploy: true
-    envVars:
-      - key: RINGBA_USERNAME
-        fromGroup: ringba-secrets
-      - key: RINGBA_PASSWORD
-        fromGroup: ringba-secrets
-      - key: RINGBA_API_TOKEN
-        fromGroup: ringba-secrets
-      - key: RINGBA_ACCOUNT_ID
-        fromGroup: ringba-secrets
-      - key: SLACK_WEBHOOK_URL
-        fromGroup: ringba-secrets
-      - key: RPC_THRESHOLD
-        value: 12.0
-      - key: MORNING_CHECK_TIME
-        value: 11:00
-      - key: MIDDAY_CHECK_TIME
-        value: 14:00
-      - key: AFTERNOON_CHECK_TIME
-        value: 16:30
-      - key: RUN_LABEL
-        value: midday
-      - key: TZ
-        value: America/New_York
-    schedule: 0 18 * * *  # 2 PM ET = 18:00 UTC
-
-  - type: cron
-    name: ringba-csv-exporter-afternoon
-    env: docker
-    dockerfilePath: ./Dockerfile
-    plan: starter
-    branch: main
-    numInstances: 1
-    autoDeploy: true
-    envVars:
-      - key: RINGBA_USERNAME
-        fromGroup: ringba-secrets
-      - key: RINGBA_PASSWORD
-        fromGroup: ringba-secrets
-      - key: RINGBA_API_TOKEN
-        fromGroup: ringba-secrets
-      - key: RINGBA_ACCOUNT_ID
-        fromGroup: ringba-secrets
-      - key: SLACK_WEBHOOK_URL
-        fromGroup: ringba-secrets
-      - key: RPC_THRESHOLD
-        value: 12.0
-      - key: MORNING_CHECK_TIME
-        value: 11:00
-      - key: MIDDAY_CHECK_TIME
-        value: 14:00
-      - key: AFTERNOON_CHECK_TIME
-        value: 16:30
-      - key: RUN_LABEL
-        value: afternoon
-      - key: TZ
-        value: America/New_York
-    schedule: 30 20 * * *  # 4:30 PM ET = 20:30 UTC 
+    cron: "0 15,18 * * * 30 20 * * *"  # This is not valid syntax
+    # We need to use multiple schedules instead
+    schedule: "0 15 * * *"  # 11am ET (15 UTC)
+    extraSchedules:
+      - schedule: "0 18 * * *"  # 2pm ET (18 UTC)
+      - schedule: "30 20 * * *"  # 4:30pm ET (20:30 UTC) 
