--- a/render.yaml
+++ b/render.yaml
@@ -3,15 +3,56 @@ services:
     name: ringba-export
     env: python
     buildCommand: |
-      # Install Chrome and ChromeDriver
+      # Install Chrome and ChromeDriver dependencies
+      apt-get update && apt-get install -y \
+        wget \
+        gnupg \
+        unzip \
+        xvfb \
+        libxi6 \
+        default-jdk \
+        fonts-liberation \
+        libasound2 \
+        libatk-bridge2.0-0 \
+        libatk1.0-0 \
+        libcups2 \
+        libdbus-1-3 \
+        libgdk-pixbuf2.0-0 \
+        libgtk-3-0 \
+        libnspr4 \
+        libnss3 \
+        libx11-xcb1 \
+        libxcomposite1 \
+        libxcursor1 \
+        libxdamage1 \
+        libxfixes3 \
+        libxrandr2 \
+        libxrender1 \
+        libxss1 \
+        libxtst6 \
+        xdg-utils
+      
+      # Install Chrome
       wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
       echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list
       apt-get update
       apt-get install -y google-chrome-stable
-      apt-get install -y chromium-chromedriver
+      
+      # Install specific version of ChromeDriver that matches Chrome
+      CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d. -f1)
+      CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
+      wget -q -O /tmp/chromedriver.zip "https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip"
+      unzip /tmp/chromedriver.zip -d /usr/local/bin/
+      chmod +x /usr/local/bin/chromedriver
+      rm /tmp/chromedriver.zip
+      
+      # Verify installations
+      google-chrome --version
+      chromedriver --version
+      
       # Install Python dependencies
       pip install -r requirements.txt
-    startCommand: python src/simple_export.py
+    startCommand: python src/web_service.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
@@ -41,5 +82,7 @@ services:
         value: "--headless=new --no-sandbox --disable-dev-shm-usage --disable-gpu --disable-software-rasterizer --disable-extensions"
       - key: PYTHONUNBUFFERED
         value: true
+      - key: PATH
+        value: "/usr/local/bin:${PATH}"
       - key: PORT
         value: 8080 
