--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ webdriver-manager==4.0.0
 python-dotenv==1.0.0
 pytz==2023.3
 requests==2.28.2
-flask==2.3.2 
+flask==2.3.2
+lxml==4.9.3
+html5lib==1.1 
