--- a/render.yaml
+++ b/render.yaml
@@ -1,193 +1,143 @@
 services:
-  - type: web
-    name: ringba-export
+  # Background Worker Service
+  - type: worker
+    name: ringba-export-service
     env: python
     buildCommand: |
-      # Install Chrome and ChromeDriver dependencies
-      apt-get update && apt-get install -y \
-        wget \
-        gnupg \
-        unzip \
-        xvfb \
-        libxi6 \
-        default-jdk \
-        fonts-liberation \
-        libasound2 \
-        libatk-bridge2.0-0 \
-        libatk1.0-0 \
-        libcups2 \
-        libdbus-1-3 \
-        libgdk-pixbuf2.0-0 \
-        libgtk-3-0 \
-        libnspr4 \
-        libnss3 \
-        libx11-xcb1 \
-        libxcomposite1 \
-        libxcursor1 \
-        libxdamage1 \
-        libxfixes3 \
-        libxrandr2 \
-        libxrender1 \
-        libxss1 \
-        libxtst6 \
-        xdg-utils
-      
-      # Install Chrome
-      wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-      echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list
-      apt-get update
-      apt-get install -y google-chrome-stable
-      
-      # Install ChromeDriver directly - known working version
-      echo "Installing ChromeDriver directly..."
-      mkdir -p /tmp/chromedriver
-      cd /tmp/chromedriver
-      
-      # Use a known stable version that's compatible with Chrome
-      CHROMEDRIVER_VERSION="113.0.5672.63"
-      echo "Using stable ChromeDriver version: $CHROMEDRIVER_VERSION"
-      
-      # Download and extract ChromeDriver
-      wget -q https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
-      unzip -o chromedriver_linux64.zip
-      
-      # Copy to standard locations and set permissions
-      cp -f chromedriver /usr/local/bin/chromedriver
-      cp -f chromedriver /usr/bin/chromedriver
-      chmod +x /usr/local/bin/chromedriver
-      chmod +x /usr/bin/chromedriver
-      
-      # Clean up
-      cd /
-      rm -rf /tmp/chromedriver
-      
-      # Verify installations and permissions
-      echo "Checking installations:"
-      google-chrome --version
-      ls -la /usr/local/bin/chromedriver
-      ls -la /usr/bin/chromedriver
-      /usr/local/bin/chromedriver --version || echo "Failed to run chromedriver version check"
-      
-      # Install Python dependencies
+      chmod +x ./setup_chrome.sh
+      ./setup_chrome.sh
       pip install -r requirements.txt
-    startCommand: python src/web_service.py
+    startCommand: python src/simple_export.py
+    runtime: python3.9
+    plan: starter
+    branch: main
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.9.0
-      - key: RINGBA_USERNAME
-        sync: false
-      - key: RINGBA_PASSWORD
-        sync: false
-      - key: SLACK_WEBHOOK_URL
-        sync: false
-      - key: RINGBA_API_TOKEN
-        sync: false
-      - key: RINGBA_ACCOUNT_ID
-        sync: false
-      - key: RPC_THRESHOLD
-        value: 12.0
-      - key: MORNING_CHECK_TIME
-        value: 11:00
-      - key: MIDDAY_CHECK_TIME
-        value: 14:00
-      - key: AFTERNOON_CHECK_TIME
-        value: 16:30
-      - key: TZ
-        value: America/New_York
-      - key: USE_HEADLESS
-        value: true
-      - key: CHROME_OPTIONS
-        value: "--headless=new --no-sandbox --disable-dev-shm-usage --disable-gpu --disable-software-rasterizer --disable-extensions"
       - key: PYTHONUNBUFFERED
-        value: true
+        value: "1"
+      - key: CHROME_OPTIONS
+        value: "--headless=new --no-sandbox --disable-dev-shm-usage --disable-gpu --single-process --disable-extensions"
+      - key: SHM_SIZE
+        value: "2g"
+      - key: NODE_OPTIONS
+        value: "--max-old-space-size=2048"
       - key: PATH
-        value: "/usr/local/bin:/usr/bin:${PATH}"
-      - key: PORT
-        value: 8080 
+        value: "$HOME/bin:$PATH"
+      - key: RPC_THRESHOLD
+        value: "12.0"
+      - key: MORNING_CHECK_TIME
+        value: "11:00"
+      - key: MIDDAY_CHECK_TIME
+        value: "14:00"
+      - key: AFTERNOON_CHECK_TIME
+        value: "16:30"
+      - key: TZ
+        value: "America/New_York"
+      # Add these from Render Dashboard:
+      # - key: RINGBA_USERNAME
+      #   sync: false
+      # - key: RINGBA_PASSWORD
+      #   sync: false
+      # - key: SLACK_WEBHOOK_URL
+      #   sync: false
 
+  # Morning Cron Job
   - type: cron
     name: ringba-csv-exporter-morning
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: python
+    buildCommand: |
+      chmod +x ./setup_chrome.sh
+      ./setup_chrome.sh
+      pip install -r requirements.txt
+    startCommand: python src/simple_export.py
+    schedule: "0 11 * * 1-5"
+    runtime: python3.9
     plan: starter
     branch: main
-    numInstances: 1
-    autoDeploy: true
     envVars:
-      - key: RINGBA_USERNAME
-        sync: false
-      - key: RINGBA_PASSWORD
-        sync: false
+      - key: PYTHONUNBUFFERED
+        value: "1"
+      - key: CHROME_OPTIONS
+        value: "--headless=new --no-sandbox --disable-dev-shm-usage --disable-gpu --single-process --disable-extensions"
+      - key: PATH
+        value: "$HOME/bin:$PATH"
       - key: RPC_THRESHOLD
-        value: 12.0
-      - key: MORNING_CHECK_TIME
-        value: 11:00
-      - key: MIDDAY_CHECK_TIME
-        value: 14:00
-      - key: AFTERNOON_CHECK_TIME
-        value: 16:30
+        value: "12.0"
       - key: RUN_LABEL
-        value: morning
+        value: "morning"
       - key: TZ
-        value: America/New_York
-      - key: SLACK_WEBHOOK_URL
-        sync: false
-    schedule: 0 15 * * *  # 11 AM ET = 15:00 UTC
+        value: "America/New_York"
+      # Add these from Render Dashboard
+      # - key: RINGBA_USERNAME
+      #   sync: false
+      # - key: RINGBA_PASSWORD
+      #   sync: false
+      # - key: SLACK_WEBHOOK_URL
+      #   sync: false
 
+  # Midday Cron Job
   - type: cron
     name: ringba-csv-exporter-midday
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: python
+    buildCommand: |
+      chmod +x ./setup_chrome.sh
+      ./setup_chrome.sh
+      pip install -r requirements.txt
+    startCommand: python src/simple_export.py
+    schedule: "0 14 * * 1-5"
+    runtime: python3.9
     plan: starter
     branch: main
-    numInstances: 1
-    autoDeploy: true
     envVars:
-      - key: RINGBA_USERNAME
-        sync: false
-      - key: RINGBA_PASSWORD
-        sync: false
+      - key: PYTHONUNBUFFERED
+        value: "1"
+      - key: CHROME_OPTIONS
+        value: "--headless=new --no-sandbox --disable-dev-shm-usage --disable-gpu --single-process --disable-extensions"
+      - key: PATH
+        value: "$HOME/bin:$PATH"
       - key: RPC_THRESHOLD
-        value: 12.0
-      - key: MORNING_CHECK_TIME
-        value: 11:00
-      - key: MIDDAY_CHECK_TIME
-        value: 14:00
-      - key: AFTERNOON_CHECK_TIME
-        value: 16:30
+        value: "12.0"
       - key: RUN_LABEL
-        value: midday
+        value: "midday"
       - key: TZ
-        value: America/New_York
-      - key: SLACK_WEBHOOK_URL
-        sync: false
-    schedule: 0 18 * * *  # 2 PM ET = 18:00 UTC
+        value: "America/New_York"
+      # Add these from Render Dashboard
+      # - key: RINGBA_USERNAME
+      #   sync: false
+      # - key: RINGBA_PASSWORD
+      #   sync: false
+      # - key: SLACK_WEBHOOK_URL
+      #   sync: false
 
+  # Afternoon Cron Job
   - type: cron
     name: ringba-csv-exporter-afternoon
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: python
+    buildCommand: |
+      chmod +x ./setup_chrome.sh
+      ./setup_chrome.sh
+      pip install -r requirements.txt
+    startCommand: python src/simple_export.py
+    schedule: "30 16 * * 1-5"
+    runtime: python3.9
     plan: starter
     branch: main
-    numInstances: 1
-    autoDeploy: true
     envVars:
-      - key: RINGBA_USERNAME
-        sync: false
-      - key: RINGBA_PASSWORD
-        sync: false
+      - key: PYTHONUNBUFFERED
+        value: "1"
+      - key: CHROME_OPTIONS
+        value: "--headless=new --no-sandbox --disable-dev-shm-usage --disable-gpu --single-process --disable-extensions"
+      - key: PATH
+        value: "$HOME/bin:$PATH"
       - key: RPC_THRESHOLD
-        value: 12.0
-      - key: MORNING_CHECK_TIME
-        value: 11:00
-      - key: MIDDAY_CHECK_TIME
-        value: 14:00
-      - key: AFTERNOON_CHECK_TIME
-        value: 16:30
+        value: "12.0"
       - key: RUN_LABEL
-        value: afternoon
+        value: "afternoon"
       - key: TZ
-        value: America/New_York
-      - key: SLACK_WEBHOOK_URL
-        sync: false
-    schedule: 30 20 * * *  # 4:30 PM ET = 20:30 UTC 
+        value: "America/New_York"
+      # Add these from Render Dashboard
+      # - key: RINGBA_USERNAME
+      #   sync: false
+      # - key: RINGBA_PASSWORD
+      #   sync: false
+      # - key: SLACK_WEBHOOK_URL
+      #   sync: false 
