--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-selenium==4.8.0
-pandas==1.5.3
+selenium==4.18.1
+requests==2.31.0
+pandas==2.1.4
+python-dotenv==1.0.1
+schedule==1.2.1
+webdriver-manager==4.0.1
+pyvirtualdisplay==3.0
 numpy==1.23.5
-webdriver-manager==4.0.0
-python-dotenv==1.0.0
 pytz==2023.3
-requests==2.28.2
 flask==2.3.2
 lxml==4.9.3
 html5lib==1.1
